fix: avoid tooltip on mobile

--- a/src/components/Tooltip.css
+++ b/src/components/Tooltip.css
@@ -37,6 +37,8 @@
   margin-right: 5px;
   width: auto;
   height: auto;
+  min-width: 22px;
+  min-height: 12px;
 }
 
 .dots-map__tooltip__country-name {
